Fix newsletter signup on mobile

--- a/public/wp-content/themes/voyager/css/responsive.css
+++ b/public/wp-content/themes/voyager/css/responsive.css
@@ -259,8 +259,10 @@
 		transform:translate(0, -50%);
 		-webkit-transform:translate(0, -50%);
 	}
-	.subscribe_popup_content{padding:40px;}
-	
+	.subscribe_popup_content{
+		padding:20px;
+	}
+
 	.fixed-sidebar{right:-320px;width:320px;}
 	.sidebar_btn{top:10px !important;}
 	
@@ -437,5 +439,27 @@
 	#related_posts_list .post-content-wrapper,
 	#author_posts_page .post-content-wrapper{
 		min-height:500px;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.subscribe_popup_content h4 {
+		font-size:38px;
+		line-height:40px;
+		margin-bottom:56px;
+	}
+
+	.subscribe_popup_close:before {
+		color: white;
+		font-size: 64px;
+	}
+
+	.subscribe_popup_close {
+		top: -22px;
+		right: 40px;
+	}
+
+	.mc4wp-response {
+		padding: 80px;
 	}
 }
