--- a/public/wp-content/themes/voyager/css/theme-style.css
+++ b/public/wp-content/themes/voyager/css/theme-style.css
@@ -346,44 +346,16 @@ body.subscribe_popup_show .subscribe_popup_wrap{
 	background-size:cover;
 	background-position:center center;
 }
-.subscribe_popup_close{
+.subscribe_popup_close {
 	position:absolute;
-	top:25px;
-	right:25px;
-	width:32px;
-	height:32px;
+	top:18px;
+	right:20px;
 }
-.subscribe_popup_close:before,
-.subscribe_popup_close:after{
-	content:'';
+.subscribe_popup_close:before {
+	content:'×';
 	position:absolute;
-	left:0;
-	top:15px;
-	width:100%;
-	height:2px;
-	border-radius:1px;
-	background-color:rgba(255,255,255,0.5);
-	transition:transform 0.4s;
-	-webkit-transition:-webkit-transform 0.4s;
 }
-.subscribe_popup_close:before{
-	transform:rotate(45deg);
-	-webkit-transform:rotate(45deg);
-}
-.subscribe_popup_close:hover:before{
-	background-color:#fff;
-	transform:rotate(-45deg);
-	-webkit-transform:rotate(-45deg);
-}
-.subscribe_popup_close:after{
-	transform:rotate(-45deg);
-	-webkit-transform:rotate(-45deg);
-}
-.subscribe_popup_close:hover:after{
-	background-color:#fff;
-	transform:rotate(45deg);
-	-webkit-transform:rotate(45deg);
-}
+
 .subscribe_popup_content{
 	padding:91px 160px 100px;
 	background-color:#fff;
@@ -392,10 +364,10 @@ body.subscribe_popup_show .subscribe_popup_wrap{
 	position:relative;
 	display:inline-block;
 	vertical-align:top;
-	margin-bottom:56px;
+	margin-bottom:24px;
 	text-transform:uppercase;
-	line-height:40px;
-	font-size:38px;
+	line-height:36px;
+	font-size:24px;
 }
 .subscribe_popup_content .mc4wp-form{
 	margin:0 25px;
