--- a/public/wp-content/themes/wild-and-without/css/main.scss
+++ b/public/wp-content/themes/wild-and-without/css/main.scss
@@ -539,9 +539,7 @@ body.boxed .top_slider_blog.type3 .top_slider_blog_descr,
     display:none;
 }
 
-.mc4wp-response {
-    padding: 80px;
-}
+
 
 .subscribe-error {
     width: 100% !important;
